[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/enemy/cactus.gd" type="Script" id=1]
[ext_resource path="res://src/img/enemy/cactus/cactus-Sheet.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("cactus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "arouse"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("cactus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("cactus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 35 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_left"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("cactus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25, 0.25 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=5]
resource_name = "move_right"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("cactus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 74.027

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 15.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 6 )

[node name="cactus" type="Node2D"]
position = Vector2( 160, 96 )
script = ExtResource( 1 )

[node name="AniTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="cactus" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 45
frame = 1
region_rect = Rect2( 7, 4, 1194, 57 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/arouse = SubResource( 2 )
anims/death = SubResource( 3 )
anims/move_left = SubResource( 4 )
anims/move_right = SubResource( 5 )

[node name="Detectbox" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectbox"]
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="." groups=["barrier"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 8.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 2, -20 )
shape = SubResource( 8 )

[connection signal="timeout" from="AniTimer" to="." method="_on_AniTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="area_entered" from="Detectbox" to="." method="_on_Detectbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
